c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/incomplete_types/sizeof_void_expression.c
int main(void) {
  int x;
  // can't apply sizeof to an expression with incomplete type
  return sizeof((void)x);
}